Implement train_init, train and test

--- a/Python/Makefile
+++ b/Python/Makefile
@@ -5,6 +5,6 @@ all: run
 run: 
 	$(PYTHON) hd_classification.py
 
-encode_test: 
-	$(PYTHON) encode_test.py
+test_driver: 
+	$(PYTHON) test_driver.py
 
